cc_library(
    name = "bip32",
    srcs = glob(["**/*.cpp", "**/*.h"]),
    hdrs = glob(["**/*.h"]),
    includes = [
        ".",
    ],
    local_defines = [
        "HAVE_CONFIG_H=1",
    ],
    deps = [
        "@//bip32/support:bip32_support",
        "@//bip32/crypto:bip32_crypto",
        "@secp256k1//:secp256k1",
        "@boost//:filesystem",
    ],
    linkopts = [
        "-lpthread",
        "-lgmp",
        "-levent",
    ],
    visibility = ["//visibility:public"],
)

