cc_library(
    name = "hdkeys",
    srcs = [
        "pubkey.h",
        "pubkey.cpp",
        "hash.h",
        "hash.cpp",
        "prevector.h",
        "compat/endian.h",
        "compat/byteswap.h",
        "compat/cpuid.h",
        "crypto/common.h",
        "crypto/sha512.h",
        "crypto/sha512.cpp",
        "crypto/hmac_sha512.h",
        "crypto/hmac_sha512.cpp",
        "crypto/ripemd160.h",
        "crypto/ripemd160.cpp",
        "crypto/sha256.h",
        "crypto/sha256.cpp",
    ],
    hdrs = [
        "pubkey.h",
    ],
    deps = [
        "@//hdkeys/uint256:uint256",
		"@secp256k1//:secp256k1",
    ],
    includes = [".", "compat", "crypto"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hdkeys_dummy",
    srcs = ["main.cpp"],
    deps = [
        ":hdkeys"
    ],
    visibility = ["//visibility:public"],
)
