cc_library(
    name = "hdkeys",
    srcs = [
        "pubkey.h",
        "pubkey.cpp",
        "hash.h",
        "hash.cpp",
		"key_io.h",
		"key_io.cpp",
		"base58.h",
		"base58.cpp",
        "prevector.h",
        "span.h",
        "serialize.h",
        "version.h",
        "compat/endian.h",
        "compat/byteswap.h",
        "compat/cpuid.h",
        "crypto/common.h",
        "crypto/sha512.h",
        "crypto/sha512.cpp",
        "crypto/hmac_sha512.h",
        "crypto/hmac_sha512.cpp",
        "crypto/ripemd160.h",
        "crypto/ripemd160.cpp",
        "crypto/sha256.h",
        "crypto/sha256.cpp",
    ],
    hdrs = [
        "pubkey.h",
		"key_io.h",
    ],
    deps = [
        "@//hdkeys/uint256:uint256",
		"@secp256k1//:secp256k1",
    ],
    copts = [
        "-std=c++17",
    ],
    includes = [".", "compat", "crypto"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hdkeys_dummy",
    srcs = ["main.cpp"],
    deps = [
        ":hdkeys"
    ],
    visibility = ["//visibility:public"],
)
