cc_library(
    name = "bip32_crypto",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    include_prefix = "crypto",
    textual_hdrs = glob([
        "ctaes/*.c",
    ]),
    includes = [
        "ctaes",
    ],
    deps = [
        "@//bip32/compat:compat",
        "@//bip32/uint256:uint256",
        "@//bip32/crypto/ctaes:ctaes",
        "@//bip32/support:bip32_support",
    ],
    visibility = ["//visibility:public"],
)
