cc_library(
    name = "uint256",
    srcs = [
        "uint256.cpp",
        "uint256.h",
        "strencodings.h",
        "strencodings.cpp",
        "attributes.h",
        "tinyformat.h",
		"span.h",
        "com_github_bitcoin_util_string.h",
    ],
    hdrs = [
        "uint256.h",
    ],
    includes = [
        "."
    ],
    visibility = ["//visibility:public"],
)
